Obsolete/CPP-API/ZetaLib.hpp

#define PROP_NAME_FONT_NAME          "Font"
//#############################################################################
// Typedes And Contansts 

typedef char* PCHAR ;
typedef int tINTBOOL;
typedef int tCONTROL;
tCONTROL  ZEUI_Root ();
tCONTROL  ZEUI_CreateDesktop (PCHAR lpszRefName, PCHAR lpszDeskName);
tCONTROL  ZEUI_SwitchDesktop (PCHAR lpszRefName);
tCONTROL  ZEUI_GetDesktop (PCHAR lpszRefName);
tCONTROL  ZEUI_CreateGameView (int Left, int Top, int Right, int Bottom);
tCONTROL  ZEUI_CreateControl (PCHAR lpszClassName, int Left, int Top, int Right, int Bottom);
void      ZEUI_InsertControl (tCONTROL ctlDest, tCONTROL ctlToInsert);
PCHAR     ZEUI_GetProp (tCONTROL ControlRef, PCHAR lpszPropName);
void      ZEUI_SetProp (tCONTROL ControlRef, PCHAR lpszPropName, PCHAR lpszPropValue);
void      ZEUI_ShowMsgBox (PCHAR cMessage);
void      ZEUI_ShowMsgBoxEx (PCHAR cMessage, int Left, int Top, int Right, int Bottom);
void      ZEUI_Hide (tCONTROL ControlRef);
void      ZEUI_Show (tCONTROL ControlRef);