DLL/ZetaAPI.pas


///////////////////////------------------------------------------------------
function ZEF_ReadFromFileI (hFile: Integer): Integer; stdcall;
var
  dData, dSizeRead: Cardinal;
begin
  try
    ReadFile (hFile, dData, SizeOf (dData), dSizeRead, NIL);
    Result := Integer (dData);
  except
    Result := 0;
  end;
end;


///////////////////////------------------------------------------------------
function ZEUI_Root: tCONTROL; stdcall;
begin
  if (CoreEngine <> NIL) then
    Result := tCONTROL (CoreEngine.WinSysRoot)
    else Result := tNULL_CONTROL;
end;

///////////////////////------------------------------------------------------
function ZEUI_CreateDesktop (lpszRefName, lpszDeskName: PChar): tCONTROL; stdcall;
begin
  if (CoreEngine <> NIL) then
    Result := tCONTROL (CoreEngine.WinSysRoot.AddDesktop (string (lpszRefName), string(lpszDeskName)))
    else Result := tNULL_CONTROL;
end;

///////////////////////------------------------------------------------------
function ZEUI_SwitchDesktop (lpszRefName: PChar): tCONTROL; stdcall;
var
  ctlDesk: TZEDesktop;
begin
  Result := tNULL_CONTROL;
  if (CoreEngine <> NIL) then begin
    ctlDesk := CoreEngine.WinSysRoot [string (lpszRefName)];
    if (ctlDesk <> NIL) then begin
      CoreEngine.WinSysRoot.UseDesktop (ctlDesk);
      Result := tCONTROL (ctlDesk);
    end;
  end;
end;

///////////////////////------------------------------------------------------
function ZEUI_GetDesktop (lpszRefName: PChar): tCONTROL; stdcall;
begin
  Result := tNULL_CONTROL;
  if (CoreEngine = NIL) then Exit;
  //
  if (lpszRefName = NIL) OR (StrLen (lpszRefName) = 0) then
    Result := tCONTROL (CoreEngine.WinSysRoot.ActiveDesktop)
    else Result := tCONTROL (CoreEngine.WinSysRoot [string (lpszRefName)]);
end;

///////////////////////------------------------------------------------------
function ZEUI_CreateGameView (Left, Top, Right, Bottom: integer): tCONTROL; stdcall;
begin
  Result := tNULL_CONTROL;
  if (CoreEngine = NIL) then Exit;
  //
  if (GameWindow <> NIL) then FreeAndNIL (GameWindow);
  GameWindow := TZEGameWindow.Create (Rect (Left, Top, Right, Bottom));
  //
  //GlobalViewEditMode := TRUE;
  Result := tCONTROL (GameWindow);
end;

///////////////////////------------------------------------------------------
function ZEUI_CreateControl (lpszClassName: PChar;
  Left, Top, Right, Bottom: integer): tCONTROL; stdcall;
begin
  if (CoreEngine <> NIL) then
    Result := tCONTROL (CreateControl (string (lpszClassName), Rect (Left, Top, Right, Bottom)))
    else Result := tNULL_CONTROL;
end;

///////////////////////------------------------------------------------------
procedure ZEUI_InsertControl (ctlDest, ctlToInsert: tCONTROL); stdcall;
var
  Group: TZEGroupControl;
  Control: TZEControl;
begin
  Group := TZEGroupControl (ctlDest);
  Control := TZEControl (ctlToInsert);
  if ((Group = NIL) OR (Control = NIL)) then Exit;
  //
  try
    Group.Insert (Control);
  except
  end;
end;

///////////////////////------------------------------------------------------
function ZEUI_GetProp (ControlRef: tCONTROL; lpszPropName: PChar): PChar; stdcall;
var
  Scriptable: TZbScriptable;
begin
  Result := NIL;
  Scriptable := TZbScriptable (ControlRef);
  try
    Result := PChar (Scriptable.GetPropertyValue (string (lpszPropName)));
  except
  end;
end;

///////////////////////------------------------------------------------------
procedure ZEUI_SetProp (ControlRef: tCONTROL; lpszPropName, lpszPropValue: PChar); stdcall;
var
  Scriptable: TZbScriptable;
begin
  Scriptable := TZbScriptable (ControlRef);
  try
    Scriptable.SetPropertyValue (lpszPropName, lpszPropValue);
  except
  end;
end;

///////////////////////------------------------------------------------------
procedure ZEUI_ToggleParentFontUse (ControlRef: tCONTROL; ibActive: tINTBOOL); stdcall;
begin
  try
    TZEControl (ControlRef).SetStyle (syUseParentFont, ibActive <> IBOOL_FALSE);
  except
  end;
end;

///////////////////////------------------------------------------------------
procedure ZEUI_RunDialog (ControlRef: tCONTROL); stdcall;
begin
  try
    CoreEngine.RunDialog (TZEControl (ControlRef));
  except
  end;
end;

///////////////////////------------------------------------------------------
procedure ZEUI_ShowInputBox (lpszPrompt: PChar; iCommand: integer; ANoCancel: tINTBOOL); stdcall;
begin
  try
    CoreEngine.ShowInputBox (String (lpszPrompt), iCommand, ANoCancel <> IBOOL_FALSE);
  except
  end;
end;

///////////////////////------------------------------------------------------
procedure ZEUI_ShowMsgBox (lpszMessage: PChar; SendCommand: Integer); stdcall;
var
  cData: String;
begin
  cData := String (lpszMessage);
  CoreEngine.ShowMsgBox (cData, SendCommand);
end;

///////////////////////------------------------------------------------------
procedure ZEUI_ShowMsgBoxEx (lpszMessage: PChar; Left, Top, Right, Bottom, SendCommand: integer); stdcall;
var
  cData: String;
begin
  cData := String (lpszMessage);
  CoreEngine.ShowMsgBox (cData, Rect (Left, Top, Right, Bottom), SendCommand);
end;

///////////////////////------------------------------------------------------
procedure ZEUI_ShowTextDialog (iWidth, iHeight: Integer; lpszFileName, lpszFontName: PChar); stdcall;
var
  dlg: TZEControl;
begin
  dlg := CreateControl (CC_TEXT_DIALOG, Rect (0, 0, iWidth, iHeight));
  if (dlg = NIL) then Exit;
  //
  if (lpszFontName <> NIL) then
    dlg.SetPropertyValue (PROP_NAME_FONT_NAME, String (lpszFontName));
  if (lpszFileName <> NIL) then begin
    dlg.SetPropertyValue (PROP_NAME_FILE_TO_LOAD, String (lpszFileName));
  end;
  //
  CoreEngine.RunDialog (dlg);
end;

///////////////////////------------------------------------------------------
procedure ZEUI_ShowPromptDialog (iWidth, iHeight: Integer;
  lpszPrompt: PChar; iCommandToGenerate: Integer); stdcall;
begin
  CoreEngine.ShowPromptDialog (iWidth, iHeight, String (lpszPrompt), iCommandToGenerate);
end;

///////////////////////------------------------------------------------------
procedure ZEUI_Hide (ControlRef: tCONTROL); stdcall;
begin
  try
    TZEControl (ControlRef).Hide;
  except
  end;
end;

///////////////////////------------------------------------------------------
procedure ZEUI_Show (ControlRef: tCONTROL); stdcall;
begin
  try
    TZEControl (ControlRef).Show;
  except
  end;
end;

///////////////////////------------------------------------------------------
procedure ZEUI_Enable (ControlRef: tCONTROL; ibActive: tINTBOOL); stdcall;
begin
  try
    TZEControl (ControlRef).SetState (stDisabled, ibActive = 0);
  except
  end;
end;

///////////////////////------------------------------------------------------
function ZEUI_GetXPos (ControlRef: tCONTROL): Integer; stdcall;
begin
  try
    Result := TZEControl (ControlRef).Left;
  except
    Result := 0;
  end;
end;

///////////////////////------------------------------------------------------
function ZEUI_GetYPos (ControlRef: tCONTROL): Integer; stdcall;
begin
  try
    Result := TZEControl (ControlRef).Top;
  except
    Result := 0;
  end;
end;

///////////////////////------------------------------------------------------
function ZEUI_GetWidth (ControlRef: tCONTROL): Integer; stdcall;
begin
  try
    Result := TZEControl (ControlRef).Width;
  except
    Result := 0;
  end;
end;

///////////////////////------------------------------------------------------
function ZEUI_GetHeight (ControlRef: tCONTROL): Integer; stdcall;
begin
  try
    Result := TZEControl (ControlRef).Height;
  except
    Result := 0;
  end;
end;

///////////////////////------------------------------------------------------
procedure ZEUI_MoveTo (ControlRef: tCONTROL; NewX, NewY: Integer); stdcall;
var
  rBounds: TRect;
  Delta: TPoint;
begin
  try
    rBounds := TZEControl (ControlRef).Bounds;
    Delta := SubPoint (rBounds.BottomRight, rBounds.TopLeft);
    rBounds.TopLeft := Point (NewX, NewY);
    rBounds.BottomRight := AddPoint (rBounds.TopLeft, Delta);
    TZEControl (ControlRef).Bounds := rBounds;
  except
  end;
end;

///////////////////////------------------------------------------------------
procedure ZEUI_MoveRel (ControlRef: tCONTROL; DeltaX, DeltaY: Integer); stdcall;
var
  rBounds: TRect;
  Delta: TPoint;
begin
  try
    rBounds := TZEControl (ControlRef).Bounds;
    Delta := Point (DeltaX, DeltaY);
    rBounds.TopLeft := AddPoint (rBounds.TopLeft, Delta);
    rBounds.BottomRight := AddPoint (rBounds.BottomRight, Delta);
    TZEControl (ControlRef).Bounds := rBounds;
  except
  end;
end;

///////////////////////------------------------------------------------------
procedure ZEUI_Resize (ControlREf: tCONTROL; NewWidth, NewHeight: Integer); stdcall;
var
  rBounds: TRect;
  Delta: TPoint;
begin
  try
    rBounds := TZEControl (ControlRef).Bounds;
    rBounds.BottomRight := AddPoint (rBounds.TopLeft, Point (NewWidth, NewHeight));
    TZEControl (ControlRef).Bounds := rBounds;
  except
  end;
end;

///////////////////////------------------------------------------------------
procedure ZEUI_Delete (ControlRef: tCONTROL); stdcall;
begin
  try
    TZEControl (ControlRef).Free;
  except
  end;
end;

///////////////////////------------------------------------------------------
function ZEEN_NameToHandle (lpszName: PChar): Integer; stdcall;
begin
  try
    Result := Integer (GameWorld.FindEntity (String (lpszName)));
  except
    Result := 0;
  end;
end;

///////////////////////------------------------------------------------------
procedure ZEEN_Delete (hEntity: Integer); stdcall;
begin
  try
    GameWorld.DeleteEntity (TZEEntity (hEntity));
  except
  end;
end;

///////////////////////------------------------------------------------------
procedure ZEEN_Unplace (hEntity: Integer); stdcall;
begin
  try
    TZEEntity (hEntity).Unplace;
  except
  end;
end;

///////////////////////------------------------------------------------------
function ZEEN_CompareBaseName (hEntity: Integer; lpszWithName: PChar): Integer; stdcall;
var
  EName: PChar;
begin
  try
    EName := PChar (TZEEntity (hEntity).MasterName);
    Result := StrComp (EName, lpszWithName);
  except
    Result := -1;
  end;
end;

///////////////////////------------------------------------------------------
function ZEEN_CompareName (hEntity: Integer; lpszWithName: PChar): Integer; stdcall;
var
  EName: PChar;
begin
  try
    EName := PChar (TZEEntity (hEntity).Name);
    Result := IfThen (StrComp (EName, lpszWithName) = 1, 1, 0);
  except
    Result := -1;
  end;
end;

///////////////////////------------------------------------------------------
function ZEEN_PrefixInName (hEntity: Integer; lpszPrefix: PChar): Integer; stdcall;
var
  //cPrefix, cPartialName: String;
  //iPrefixLen, iNameLen: Integer;
  theEntity: TZEEntity;
begin
  Result := 0;
  try
    theEntity := TZEEntity (hEntity);
    Result := Integer (theEntity.PrefixInName (lpszPrefix));
    {
    cPrefix := String (lpszPrefix);
    if (hEntity <> 0) AND (cPrefix <> '') then begin
      iPrefixLen := Length (cPrefix);
      iNameLen := Length (TZEEntity (hEntity).Name);
      //
      if (iPrefixLen <= iNameLen) then begin
        cPartialName := LeftStr (TZEEntity (hEntity).Name, iPrefixLen);
        if (StrComp (PChar (cPartialName), lpszPrefix) = 0) then Result := 1;
      end;
      //
    end;}
  except
  end;
end;

///////////////////////------------------------------------------------------
function ZEEN_GetWidth (hEntity: Integer): Integer; stdcall;
begin
  try
    Result := TZEEntity (hEntity).Width;
  except
    Result := 0;
  end;
end;

///////////////////////------------------------------------------------------
function ZEEN_GetLength (hEntity: Integer): Integer; stdcall;
begin
  try
    Result := TZEEntity (hEntity).Length;
  except
    Result := 0;
  end;
end;
